# Task-Managment-API

./: .env  .env.example  .gitignore  main.py  pyproject.toml  task_management.db
app/: config.py  main.py
app/api/: dependencies.py
app/api/v1/: tasks.py
app/core/: exceptions.py  handlers.py  logging.py
app/models/: task.py
app/services/: __init__.py  task.py
infrastructure/docker/: docker-compose.yml
services/notification-service/: .env  pyproject.toml
services/notification-service/app/: config.py  handlers.py
services/task-api/: .env.example  .gitignore  alembic.ini  pyproject.toml
services/task-api/alembic/: env.py
services/task-api/alembic/versions/: cd842e321782_initial_tables.py
services/task-api/app/: config.py  main.py
services/task-api/app/api/: dependencies.py
services/task-api/app/api/v1/: auth.py  health.py  tasks.py
services/task-api/app/core/: cache.py  cache_keys.py  events.py  exceptions.py  health.py  messaging.py  middleware.py  rate_limiter.py  resilience.py  security.py
services/task-api/app/db/: database.py  unit_of_work.py
services/task-api/app/db/entities/: __init__.py  base.py  task.py  user.py
services/task-api/app/db/repositories/: base.py  specifications.py  task.py  user.py
services/task-api/app/models/: common.py  events.py  health.py  task.py  user.py
services/task-api/app/services/: __init__.py  auth.py  task.py
services/task-api/tests/: conftest.py
services/task-api/tests/integration/: test_auth.py  test_tasks.py
services/task-api/tests/unit/: test_models.py  test_security.py
